fixed bake btn alignment

--- a/src/components/NewsItem/NewsItem.css
+++ b/src/components/NewsItem/NewsItem.css
@@ -40,14 +40,15 @@ li {
   .article-section {
     display: block;
     margin-left: 5px;
-    height: 200px;
+    /* height: 200px; */
     overflow: auto;
   }
-  /* .listItem {
-    display: flex;
-  } */
+
+  .bake-section {
+    height: 400px;
+  }
   
-  .score {
+  .oven {
     display: none;
     /* margin-left: 5px;
     margin-right: 15px;
@@ -58,11 +59,11 @@ li {
   }
 
   .ovenBtn {
+    margin: 10px auto;
     height: 35px;
     text-align: center;
     display: flex;
     cursor: pointer;
-    margin-top: 100px;
     font-size: 1rem;
   }
 
@@ -117,7 +118,7 @@ li {
 
   @media only screen and (max-width: 600px) {
     .item {
-      display:flex;
+    display:flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
